[project]
name = "pykgr"
version = "0.1.0"
description = ""
authors = [
    {name = "DylanEHolland", email = "dylaneholland@gmail.com"},
]
dependencies = [
    "argparse>=1.4.0"
]
requires-python = ">=3.9"
license = {text = "BSD"}

[project.urls]
Homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
